--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
     <meta name="description" content="Perfil personal">
     <meta name="keywords" content="HTML, CSS, Perfil, Foto">
     <title>Mi Perfil Colorido</title>
-    <!-- Vinculación al archivo CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1>Bienvenido a Mi Perfil</h1>
     </header>
+
     <div class="profile">
-        <img src="c:\Users\Hp\Downloads\WhatsApp Image 2024-11-25 at 5.46.40 PM.jpeg" alt="Foto de perfil">
-        <h2>Tu Nombre</h2>
-        <p>Una breve descripción sobre ti. Comparte tus intereses, ocupación o algo único sobre ti.</p>
+        <img src="WhatsApp Image 2024-11-25 at 5.46.40 PM.jpg" alt="Foto de perfil">
+        <h2>Angelo López</h2>
+        <p>Hola, Soy un estudiante de la famosa UTC</p>
     </div>
+
     <footer>
         &copy; 2024 Mi Perfil. Todos los derechos reservados.
     </footer>
