--- a/index.html
+++ b/index.html
@@ -3,25 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Tu Nombre">
-    <meta name="description" content="Perfil personal">
-    <meta name="keywords" content="HTML, CSS, Perfil, Foto">
-    <title>Mi Perfil Colorido</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Portada Personal</title>
+    <link rel="stylesheet" href="style.css"> <!-- Vincula tu archivo CSS -->
 </head>
 <body>
     <header>
-        <h1>Bienvenido a Mi Perfil</h1>
+        <h1>Bienvenidos a Mi Portada</h1>
+        <p>¡Hola! Soy Angelo López y esta es mi página personal.</p>
     </header>
 
-    <div class="profile">
-        <img src="WhatsApp Image 2024-11-25 at 5.46.40 PM.jpg" alt="Foto de perfil">
-        <h2>Angelo López</h2>
-        <p>Hola, Soy un estudiante de la famosa UTC</p>
-    </div>
+    <section class="foto">
+        <img src="Onda.jpeg" alt="Mi foto" class="imagen"> <!-- Cambié la clase a 'imagen' -->
+    </section>
+
+    <section class="informacion">
+        <h2>Acerca de mí</h2>
+        <p>Mi nombre es Angelo, soy estudiante de la famosa UTC y me apasiona programar.</p>
+        <p>Hoy sabrás sobre la programación.</p>
+    </section>
 
     <footer>
-        &copy; 2024 Mi Perfil. Todos los derechos reservados.
-    </footer>
-</body>
-</html>
+      
