--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portada Personal</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> <!-- Vincula tu archivo CSS -->
 </head>
 <body>
     <header>
@@ -13,7 +13,7 @@
     </header>
 
     <section class="foto">
-        <img src="Onda.jpeg" alt="Mi foto" class="imagen">
+        <img src="Onda.jpeg" alt="Mi foto" class="imagen"> <!-- Cambié la clase a 'imagen' -->
     </section>
 
     <section class="informacion">
@@ -23,4 +23,10 @@
     </section>
 
     <footer>
-      
+        <!-- Botón de Instagram -->
+        <a href="https://www.instagram.com/zedd.2525/" class="instagram-btn" target="_blank">
+            Visita Mi Instagram
+        </a>
+    </footer>
+</body>
+</html>
