--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <a href="https://www.instagram.com/zedd.2525/" class="instagram-btn" target="_blank">
             Visita Mi Instagram
         </a>
+        <a href="https://www.facebook.com/profile.php?id=100021905484297" class="facebook-btn" target="_blank">
+            Visita Mi Facebook
+        </a>
     </footer>
 </body>
 </html>
