--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
             Visita Mi Facebook
         </a>
         <!-- Botón de Ingresar   -->
+    </footer>
     <button class="btn btn-sucess" onclick="showMessage()">INGRESAR</button>
     <button class="btn btn-primary" onclick="cambiarContenido()">Cambiar Contenido</button>
-    </footer>
 
         <!-- Semáforo-->
+        <div>
 
-    </button>
+        </div>
     <script>
         function showMessage(){
             alert("Has presionado el boton Aceptar");
