--- a/index.html
+++ b/index.html
@@ -49,12 +49,19 @@
             Visita Mi Facebook
         </a>
         <!-- Botón de Ingresar   -->
+    
+        <button class="btn btn-sucess" onclick="showMessage()">INGRESAR</button>
+        <button class="btn btn-primary" onclick="cambiarContenido()">Cambiar Contenido</button>
     </footer>
-    <button class="btn btn-sucess" onclick="showMessage()">INGRESAR</button>
-    <button class="btn btn-primary" onclick="cambiarContenido()">Cambiar Contenido</button>
-
         <!-- Semáforo-->
-        <div>
+        <div class="card">
+            <div class="card-header text-center">
+                <h4>Actividad Semáforo</h4>
+                <p class="card-body">
+                    Semáforo
+                    <a class="btn btn-danger" href=""></a>
+                </p>
+            </div>
 
         </div>
     <script>
