--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <h4>Actividad Semáforo</h4>
                 <p class="card-body">
                     Semáforo
-                    <a class="btn btn-danger" href=""></a>
+                    <a class="btn btn-danger" href="https://zedd123516.github.io/Sem-foro/">Semáforo</a>
                 </p>
             </div>
 
