--- a/index.html
+++ b/index.html
@@ -49,19 +49,18 @@
             Visita Mi Facebook
         </a>
         <!-- Botón de Ingresar   -->
-    
+        
         <button class="btn btn-sucess" onclick="showMessage()">INGRESAR</button>
         <button class="btn btn-primary" onclick="cambiarContenido()">Cambiar Contenido</button>
     </footer>
         <!-- Semáforo-->
-        <div class="card">
+        <div class="card1">
             <div class="card-header text-center">
                 <h4>Actividad Semáforo</h4>
                 <p class="card-body">
                     Semáforo
-                    <button class="btn btn-danger" onclick="window.location.href='https://zedd123516.github.io/Sem-foro/'">Semáforo</button>
-
                 </p>
+                <button class="btn btn-danger1" onclick="window.location.href='https://zedd123516.github.io/Sem-foro/'">Semáforo</button>
             </div>
 
         </div>
