--- a/Champions.html
+++ b/Champions.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portada Personal</title>
-    <link rel="stylesheet" href="style.css"> <!-- Vincula tu archivo CSS -->
+    <link rel="stylesheet" href="style2.css"> <!-- Vincula tu archivo CSS -->
 </head>
 <body>
     <header>
-        <h1>Bienvenidos a Mi Portada</h1>
-        <p>¡Hola! Soy Angelo López y esta es mi página personal.</p>
+        <div class="Logo-titulo">
+            <img src="champions.png" alt="icono EUFA" class="logo">
+            <h1>UEFA CHAMPIONS LEAGUE</h1>
+        </div>
     </header>
+        <section class="informacion">
+            <h2>¿QUÉ ES LA CHAMPIONS LEAGUE?</h2>
+            <p>La Champions League o Liga de Campeones de la UEFA
+            es una competición de fútbol europea con gran importancia
+            en todo el mundo, no solo desde el punto de vista futbolístico,
+            sino económico y reputacional.</p>
+        </section>
+    <video class="video" controls>
+        <source src="Hola.mp4" type="video/mp4">
+    </video>
+</body>
