--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
     </div>
     <button class="btn btn-success" onclick="cambiarColor('color1','green','color2')">Cambiar Color 1</button>
     <button class="btn btn-danger" onclick="cambiarColor('color2','red','color1')">Cambiar Color 2</button>
-    <button class="btn btn-danger2" onclick="">Ir a Champions League</button> 
 
     <footer>
         <!-- Botón de Instagram -->
@@ -66,7 +65,12 @@
             </div>
 
         </div>
-        
+        <div class="Champions">
+            <div class="card-header text-center">
+                <h4>EUFA CHAMPIONS LEAGUE</h4>
+                <button class="btn btn-danger2" onclick="window.location.href='Champions.html'">Champions</button>
+            </div>
+        </div>
 
     <script>
         function showMessage(){
@@ -87,6 +91,6 @@
             // Cambia el color del elemento actual
             elemento.style.backgroundColor = color;
         }
-    </script> 
+    </script>
 </body>
 </html>
