--- a/Champions.html
+++ b/Champions.html
@@ -23,4 +23,12 @@
     <video class="video" controls>
         <source src="Hola.mp4" type="video/mp4">
     </video>
+
+        <section class="Opinion">
+        <h2>HIMNO EUFA CHAMPIONS LEAGUE</h2>
+        </section>
+    <audio class="audio" controls muted>
+        <source src="HIMNO.mp3" type="audio/mp3">
+
+    </audio> 
 </body>
