--- a/Champions.html
+++ b/Champions.html
@@ -31,4 +31,19 @@
         <source src="HIMNO.mp3" type="audio/mp3">
 
     </audio> 
+
+        <section class="historia">
+            <h2>LA HISTORIA DETRÁS DE LA CHAMPIONS LEAGUE</h2>
+            <img src="champions1.webp" alt="icono EUFA" class="logo1">
+            <p>La UEFA Champions League, la prestigiosa competición europea de clubes,
+                comenzó en 1955/56 como la Copa de Europa. Descubre su fascinante historia
+                La Champions League de la UEFA, la prestigiosa competición de fútbol de clubes
+                de Europa, tiene una historia rica y fascinante que se remonta a su primera temporada
+                en 1955/56, cuando se conocía como la Copa de Europa. Esta competición fue concebida por
+                el periodista deportivo francés Gabriel Hanot y contó con la participación de 16 equipos
+                en su temporada inaugural.
+                El Real Madrid se alzó como el primer campeón de la Copa de Europa en 1955/56, estableciendo
+                así su legado en la historia del torneo. A lo largo de los años, el torneo ha evolucionado y
+                crecido, con 32 equipos compitiendo en la fase de grupos en la actualidad.</p>
+        </section>
 </body>
